# biosff

./: biosff.cabal
src/: Flower.hs  Fork.hs  Options.hs  Print.hs
src/Bio/Sequence/: SFF.hs  SFF_filters.hs  SFF_name.hs
src/FClip/: Main.hs  Options.hs
src/FRecover/: Main.hs
src/Flower/: Main.hs  Metrics.hs  Options.hs
